fix: fixed date picker bug on mobile

--- a/src/views/food/components/food-detail/FoodDetail.css
+++ b/src/views/food/components/food-detail/FoodDetail.css
@@ -7,6 +7,7 @@
 }
 
 .ant-picker-input input {
+    cursor: pointer;
     font-family: 'Kanit', sans-serif;
 }
 
